--- a/API-REST/package.json
+++ b/API-REST/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "API REST de la sae 501",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lucas PIAU",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
+    "mongodb": "^6.11.0"
   }
 }
