--- a/API-REST/package.json
+++ b/API-REST/package.json
@@ -2,6 +2,7 @@
   "name": "api-rest",
   "version": "1.0.0",
   "description": "API REST de la sae 501",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +10,8 @@
   "author": "Lucas PIAU",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
