--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #LOCAL
-# REACT_APP_API_LINK=http://localhost:3001/api
+REACT_APP_API_LINK=http://localhost:3001/api
 
 #VM
-REACT_APP_API_LINK=/api
+#REACT_APP_API_LINK=/api
